--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 title: Midterm Lab Task 1
-logo:
+logo: 
+description: Minimal is a theme for GitHub Pages.
 show_downloads: true
-#theme: heykll-theme-hacker
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
+google_analytics:
+theme: jekyll-theme-minimal
 
