--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Midterm Lab Task 1
 logo: 
-description: Minimal is a theme for GitHub Pages.
+description: 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
